vlib/v/checker/tests/map_init_wrong_type.vv
fn main() {
   mut a := map[string]f32{}
   a = { 'x': 12.3 }
}
